tests/baselines/reference/strictModeWordInImportDeclaration.errors.txt
tests/cases/compiler/strictModeWordInImportDeclaration.ts(2,13): error TS1214: Identifier expected. 'package' is a reserved word in strict mode. Modules are automatically in strict mode.
tests/cases/compiler/strictModeWordInImportDeclaration.ts(2,26): error TS2307: Cannot find module './1' or its corresponding type declarations.
tests/cases/compiler/strictModeWordInImportDeclaration.ts(3,16): error TS1214: Identifier expected. 'private' is a reserved word in strict mode. Modules are automatically in strict mode.
tests/cases/compiler/strictModeWordInImportDeclaration.ts(3,30): error TS2307: Cannot find module './1' or its corresponding type declarations.
tests/cases/compiler/strictModeWordInImportDeclaration.ts(4,8): error TS1214: Identifier expected. 'public' is a reserved word in strict mode. Modules are automatically in strict mode.
tests/cases/compiler/strictModeWordInImportDeclaration.ts(4,20): error TS2307: Cannot find module './1' or its corresponding type declarations.


==== tests/cases/compiler/strictModeWordInImportDeclaration.ts (6 errors) ====
    "use strict"
    import * as package from "./1"
                ~~~~~~~
!!! error TS1214: Identifier expected. 'package' is a reserved word in strict mode. Modules are automatically in strict mode.
                             ~~~~~
!!! error TS2307: Cannot find module './1' or its corresponding type declarations.
    import {foo as private} from "./1"
                   ~~~~~~~
!!! error TS1214: Identifier expected. 'private' is a reserved word in strict mode. Modules are automatically in strict mode.
                                 ~~~~~
!!! error TS2307: Cannot find module './1' or its corresponding type declarations.
    import public from "./1"
           ~~~~~~
!!! error TS1214: Identifier expected. 'public' is a reserved word in strict mode. Modules are automatically in strict mode.
                       ~~~~~
!!! error TS2307: Cannot find module './1' or its corresponding type declarations.